--- a/Assets/Scripts/Menu/UI.asmdef
+++ b/Assets/Scripts/Menu/UI.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Entities",
+    "name": "UI",
     "rootNamespace": "",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
