--- a/.github/workflows/Build.yaml
+++ b/.github/workflows/Build.yaml
@@ -1,9 +1,9 @@
-name: Build project
+name: Build project 🚀
 
 on: workflow_dispatch
 jobs:
   build:
-    name: Build my project ✨
+    name: Build my project
     runs-on: ubuntu-latest
     steps:
       # Checkout (without LFS)
