--- a/.github/workflows/TestandBuild.yaml
+++ b/.github/workflows/TestandBuild.yaml
@@ -1,10 +1,10 @@
-name: Test and build 🧪
+name: Test and build
 
-on: workflow_dispatch
+on: [workflow_dispatch, pull_request]
 
 jobs:
-  build:
-    name: Test and build project
+  test:
+    name: Test project 🧪
     runs-on: ubuntu-latest
     steps:
       # Checkout
@@ -12,14 +12,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
-
-      # Cache
-      - uses: actions/cache@v3
-        with:
-          path: Library
-          key: Library-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
-          restore-keys: |
-            Library-
 
       # Test
       - name: Run tests
@@ -31,6 +23,16 @@ jobs:
         with:
           githubToken: ${{ secrets.GITHUB_TOKEN }}
 
+  build:
+    name: Build project 🚀
+    runs-on: ubuntu-latest
+    steps:
+      # Checkout
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          lfs: true
+
       # Build
       - name: Build project
         uses: game-ci/unity-builder@v4
@@ -39,8 +41,8 @@ jobs:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
+          targetPlatform: StandaloneWindows64
           allowDirtyBuild: true
-          targetPlatform: WebGL
 
       # Output
       - uses: actions/upload-artifact@v3
