--- a/Assets/Scripts/Entities/Spawners/Spawners.asmdef
+++ b/Assets/Scripts/Entities/Spawners/Spawners.asmdef
@@ -1,8 +1,9 @@
 {
-    "name": "NewAssembly",
+    "name": "Spawners",
     "rootNamespace": "",
     "references": [
-        "GUID:1594f8f9ef974e7418604bed9061c3e4"
+        "GUID:1594f8f9ef974e7418604bed9061c3e4",
+        "GUID:231b02e0fa66d9b4fa483404a6cf972f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
