--- a/Assets/Scripts/Menu/UI.asmdef
+++ b/Assets/Scripts/Menu/UI.asmdef
@@ -2,7 +2,8 @@
     "name": "UI",
     "rootNamespace": "",
     "references": [
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:231b02e0fa66d9b4fa483404a6cf972f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
