--- a/Assets/Scripts/Entities/Spawners/Spawners.asmdef
+++ b/Assets/Scripts/Entities/Spawners/Spawners.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "GUID:1594f8f9ef974e7418604bed9061c3e4",
-        "GUID:231b02e0fa66d9b4fa483404a6cf972f"
+        "GUID:231b02e0fa66d9b4fa483404a6cf972f",
+        "GUID:b01bbfce60dda1f4abd6f857b7089d3b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
